ci(backend): publish Leyden optimized Docker image